@@ -9,10 +9,14 @@
 	<properties>
 		<org.springframework-version>4.0.6.RELEASE</org.springframework-version>
 		<org.springframework.security-version>3.2.4.RELEASE</org.springframework.security-version>
-		<spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
+		<spring-data-jpa-version>1.6.2.RELEASE</spring-data-jpa-version>
+		<hibernate-entitymanager.version>4.3.6.Final</hibernate-entitymanager.version>
 		<versions.aspectj>1.7.3</versions.aspectj>
+		<codahale-metrics.version>3.0.2</codahale-metrics.version>
+		<usertype-core.version>3.2.0.GA</usertype-core.version>
+		<HikariCP.version>1.4.0</HikariCP.version>
 		<!-- log configuration -->
-        <logback.loglevel>DEBUG</logback.loglevel>
+		<logback.loglevel>DEBUG</logback.loglevel>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -62,14 +66,36 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.6.10.Final</version>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate-entitymanager.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate-entitymanager.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>${hibernate-entitymanager.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>ehcache-core</artifactId>
+					<groupId>net.sf.ehcache</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${HikariCP.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun</groupId>
+                    <artifactId>tools</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -201,6 +227,11 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jadira.usertype</groupId>
+			<artifactId>usertype.core</artifactId>
+			<version>${usertype-core.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -246,12 +277,12 @@
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			<version>3.0.2</version>
+			<version>${codahale-metrics.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
 			<artifactId>metrics-servlet</artifactId>
-			<version>3.0.2</version>
+			<version>${codahale-metrics.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
@@ -261,12 +292,17 @@
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
 			<artifactId>metrics-servlets</artifactId>
-			<version>3.0.2</version>
+			<version>${codahale-metrics.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
 			<artifactId>metrics-json</artifactId>
-			<version>3.0.2</version>
+			<version>${codahale-metrics.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.codahale.metrics</groupId>
+			<artifactId>metrics-ehcache</artifactId>
+			<version>${codahale-metrics.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ryantenney.metrics</groupId>
@@ -297,6 +333,21 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1101-jdbc41</version>
 		</dependency>
 	</dependencies>
 
@@ -337,7 +388,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-					<compilerArgument>-proc:none</compilerArgument> 
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -412,31 +463,34 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>keytool-maven-plugin</artifactId>
-			    <version>1.5</version>
-			    <configuration>
-			        <keystore>${project.basedir}/src/main/config/tomcat-ssl.keystore</keystore>
-			        <dname>cn=localhost</dname>
-			        <!--Both `keypass` and `storepass` must be at least 6 characters long. -->
-			        <keypass>tomcat7</keypass>
-			        <storepass>tomcat7</storepass>
-			        <alias>tomcat7</alias>
-			        <keyalg>RSA</keyalg>
-			        <validity>99999</validity>
-			        <file>${project.basedir}/src/main/config/tomcat-ssl.cer</file>
-			    </configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>keytool-maven-plugin</artifactId>
+				<version>1.5</version>
+				<configuration>
+					<keystore>${project.basedir}/src/main/config/tomcat-ssl.keystore</keystore>
+					<dname>cn=localhost</dname>
+					<!--Both `keypass` and `storepass` must be at least 6 characters long. -->
+					<keypass>tomcat7</keypass>
+					<storepass>tomcat7</storepass>
+					<alias>tomcat7</alias>
+					<keyalg>RSA</keyalg>
+					<validity>99999</validity>
+					<file>${project.basedir}/src/main/config/tomcat-ssl.cer</file>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-			        <port>8080</port>
-			        <httpsPort>9090</httpsPort>
-			        <keystoreFile>${project.basedir}/src/main/config/tomcat-ssl.keystore</keystoreFile>
-			        <keystorePass>tomcat7</keystorePass>
-			    </configuration>
+					<port>8080</port>
+					<httpsPort>9090</httpsPort>
+					<keystoreFile>${project.basedir}/src/main/config/tomcat-ssl.keystore</keystoreFile>
+					<keystorePass>tomcat7</keystorePass>
+					<systemProperties>
+						<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+					</systemProperties>
+				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
